--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
                     placeholder=" Enter your full name"
                     required>
         
-                    <textarea 
+                    <!-- <textarea 
                     name="userreason" 
                     id="user-reason" 
                     class="user-reason"
                     cols="50"
                     role="50"
-                    placeholder="Why do you think you can learn Web development in one week? (not required)"></textarea>
+                    placeholder="Why do you think you can learn Web development in one week? (not required)"></textarea> -->
         
                     <div class="btn-container" id="btn-container">
                         <button type="submit" class="submit-btn" id="submit-btn">submit</button>
